--- a/Coursework/Blocks/Block10/external.css
+++ b/Coursework/Blocks/Block10/external.css
@@ -69,6 +69,20 @@ img {
     .box4{
         margin: 0 0 0 0;
     }
+    .circle_attribute{
+        position: absolute;
+        z-index: 3;
+        top: 300px;
+        left: calc(48% - 100px)
+    }
+    
+    #circle{
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        background-color: red;
+        display: inline-block;
+    }
 }
 
 
@@ -81,6 +95,20 @@ img {
     .box4{
         margin: 0 0 0 0;
     }
+    .circle_attribute{
+        position: absolute;
+        z-index: 3;
+        top: 360px;
+        left: calc(52% - 100px)
+    }
+    
+    #circle{
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        background-color: red;
+        display: inline-block;
+    }
 }
 
 
@@ -92,5 +120,19 @@ img {
     }
     .box4{
         margin: 0 10px 0 10px;
+    }
+    .circle_attribute{
+        position: absolute;
+        z-index: 3;
+        top: 310px;
+        left: calc(60% - 100px)
+    }
+    
+    #circle{
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        background-color: red;
+        display: inline-block;
     }
 }
